# drone-terrain-reconstruction-

./: Blog.md  CMakeLists.txt  LA_notes.md  LAlg_Visualisations.md  LICENSE  PCD-vs-MLS.md  PCL_vs_MLS.md  Pre-Processing-Algorithms-Overview.md  README.md  nepca.cpp  package.xml  surface_reconstruction.md  test_pcd.pcd
Assets/: source-data.pcd
Basics/: CoreROSTutorials.md  LA_notes.md
Code/: CMakeLists.txt  VGF-PCA-GA.cpp
Documentation-Findings/: VGF-PCA-GA-Findings.md
GA-PCA/: CMakeLists.txt
Notes/: LIDARSensorOperations.md
Notes/Pre-Processing: Principal-Component-Analysis/: Overview.md  Terminologies-Technologies.md
Notes/Processing: Fast-Triangulation-Algorithm/: Greedy-Projection-Algorithm.md
Notes/The Roots: ROS-Linear-Algebra/: LA-Visualisations.md  ROS-Notes.md
Processing: Fast-Triangulation-Algorithm/: Parameter-Variation.md
VGF-PCA-GA/: VGF-PCA-GA.cpp
config/: drone.rviz
drone_ws/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
drone_ws/logs/sjtu_drone/: build.check.023.log.stderr  build.check.024.log.stderr  build.check.025.log.stderr  build.check.026.log.stderr  build.check.027.log.stderr  build.check.028.log.stderr  build.check.029.log.stderr  build.check.030.log.stderr  build.check.039.log.stderr  build.check.041.log.stderr  build.cmake.003.log.stderr  (+12 more)
launch/: simple.launch
mls/: CMakeLists.txt  MLS.md
pca/: CMakeLists.txt
pre_processing/: kd_tree.md  surface_reconstruction.md
scripts/: listener.cpp
urdf/: sjtu_drone.urdf
worlds/: terrain.world
(+19 files in other folders)
